force-app/main/default/objects/TBank_Complaint_History__c/TBank_Complaint_History__c.object-meta.xml
<CustomObject>
    <description>For store TBank main complaint history data.</description>
    <label>TBank Complaint History</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>TBank Complaint History		 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TBank Complaint History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>