force-app/main/default/objects/TBank_Complaint_History__c/fields/ChannelForReceivingDesc__c.field-meta.xml
<CustomField>
    <fullName>ChannelForReceivingDesc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complain Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>