force-app/main/default/objects/TBank_Complaint_History__c/fields/ClosingReasonAdditional__c.field-meta.xml
<CustomField>
    <fullName>ClosingReasonAdditional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>