force-app/main/default/objects/TBank_Complaint_History__c/fields/ClosingReasonBy__c.field-meta.xml
<CustomField>
    <fullName>ClosingReasonBy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>