force-app/main/default/objects/TBank_Complaint_History__c/fields/ClosingReasonDesc__c.field-meta.xml
<CustomField>
    <fullName>ClosingReasonDesc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closing reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>