force-app/main/default/objects/TBank_Complaint_History__c/fields/Complainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Complainer_Name__c</fullName>
    <description>Concatenating data (ComplainerInfoTitle__c + ComplainerInfoName__c + ComplainerInfoSurName__c)</description>
    <formula>ComplainerInfoTitle__c + &apos; &apos; + ComplainerInfoName__c + &apos; &apos; + ComplainerInfoSurName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complainer Name</label>
    <type>Text</type>
</CustomField>