force-app/main/default/objects/TBank_Complaint_History__c/fields/ComplainerInfobyCustdate__c.field-meta.xml
<CustomField>
    <fullName>ComplainerInfobyCustdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End date</label>
    <type>DateTime</type>
</CustomField>