force-app/main/default/objects/TBank_Complaint_History__c/fields/ComplainerInfoEmail__c.field-meta.xml
<CustomField>
    <fullName>ComplainerInfoEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>