force-app/main/default/objects/TBank_Complaint_History__c/fields/ComplainerInfoInformByAdditional__c.field-meta.xml
<CustomField>
    <fullName>ComplainerInfoInformByAdditional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>More info.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>