force-app/main/default/objects/TBank_Complaint_History__c/fields/ComplainerInfoPhone1__c.field-meta.xml
<CustomField>
    <fullName>ComplainerInfoPhone1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>