force-app/main/default/objects/TBank_Complaint_History__c/fields/ComplainerInfoPhone2__c.field-meta.xml
<CustomField>
    <fullName>ComplainerInfoPhone2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call in No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>