force-app/main/default/objects/TBank_Complaint_History__c/fields/ComplainerInfoSurName__c.field-meta.xml
<CustomField>
    <fullName>ComplainerInfoSurName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>