force-app/main/default/objects/TBank_Complaint_History__c/fields/ComplaintRecipientBranchOrDepartment__c.field-meta.xml
<CustomField>
    <fullName>ComplaintRecipientBranchOrDepartment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsible BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>