force-app/main/default/objects/TBank_Complaint_History__c/fields/CustInfoFacebook__c.field-meta.xml
<CustomField>
    <fullName>CustInfoFacebook__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facebook</label>
    <length>50</length>
    <type>Text</type>
</CustomField>