force-app/main/default/objects/TBank_Complaint_History__c/fields/CustInfoIdentificationTypeAdditional__c.field-meta.xml
<CustomField>
    <fullName>CustInfoIdentificationTypeAdditional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>