force-app/main/default/objects/TBank_Complaint_History__c/fields/CustInfoIdentificationTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>CustInfoIdentificationTypeDesc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>