force-app/main/default/objects/TBank_Complaint_History__c/fields/CustInfoPhone1__c.field-meta.xml
<CustomField>
    <fullName>CustInfoPhone1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tel No.1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>