force-app/main/default/objects/TBank_Complaint_History__c/fields/CustInfoPhone3__c.field-meta.xml
<CustomField>
    <fullName>CustInfoPhone3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tel No.3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>