force-app/main/default/objects/TBank_Complaint_History__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>ComplainerInfoTitle__c +&apos; &apos;+ComplainerInfoName__c+ &apos; &apos;+ComplainerInfoSurName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>