force-app/main/default/objects/TBank_Complaint_History__c/fields/CustSolutionSurName__c.field-meta.xml
<CustomField>
    <fullName>CustSolutionSurName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>