force-app/main/default/objects/TBank_Complaint_History__c/fields/PriorityDay__c.field-meta.xml
<CustomField>
    <fullName>PriorityDay__c</fullName>
    <label>SLA day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>