force-app/main/default/objects/TBank_Complaint_History__c/fields/SalesChannelAdditional__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelAdditional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>More info.</label>
    <length>35</length>
    <type>Text</type>
</CustomField>