force-app/main/default/objects/TBank_Complaint_History__c/fields/SalesChannelDesc__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelDesc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>