force-app/main/default/objects/TBank_Complaint_History__c/fields/SatatusSLAName__c.field-meta.xml
<CustomField>
    <fullName>SatatusSLAName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>