force-app/main/default/objects/TBank_Complaint_History__c/fields/SLADetailActionDate__c.field-meta.xml
<CustomField>
    <fullName>SLADetailActionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last update date</label>
    <type>DateTime</type>
</CustomField>