force-app/main/default/objects/TBank_Complaint_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>35</length>
    <type>Text</type>
</CustomField>