force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFAddressNo__c.field-meta.xml
<CustomField>
    <fullName>TCIFAddressNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>