force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFDistrict__c.field-meta.xml
<CustomField>
    <fullName>TCIFDistrict__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>