force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFID__c.field-meta.xml
<CustomField>
    <fullName>TCIFID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TCIF ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>