force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFMoo__c.field-meta.xml
<CustomField>
    <fullName>TCIFMoo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Moo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>