force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFName__c.field-meta.xml
<CustomField>
    <fullName>TCIFName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>