force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFProvince__c.field-meta.xml
<CustomField>
    <fullName>TCIFProvince__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province</label>
    <length>200</length>
    <type>Text</type>
</CustomField>