force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFRoomNo__c.field-meta.xml
<CustomField>
    <fullName>TCIFRoomNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Room No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>