force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFSoi__c.field-meta.xml
<CustomField>
    <fullName>TCIFSoi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Soi</label>
    <length>60</length>
    <type>Text</type>
</CustomField>