force-app/main/default/objects/TBank_Complaint_History__c/fields/TCIFSubDistrict__c.field-meta.xml
<CustomField>
    <fullName>TCIFSubDistrict__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subdistrict</label>
    <length>40</length>
    <type>Text</type>
</CustomField>